--- a/cell02/ex01/menu.css
+++ b/cell02/ex01/menu.css
@@ -21,8 +21,8 @@ dropbtn {
   }
   
   .dropdown-content a {
-    color: black;
-    padding: 12px 16px;
+    color: #000000;
+    padding: 12px 50px;
     text-decoration: none;
     display: block;
   }
