--- a/cell02/ex01/menu.css
+++ b/cell02/ex01/menu.css
@@ -1,4 +1,4 @@
-dropbtn {
+  .dropbtn {
     background-color: #04AA6D;
     color: white;
     padding: 16px;
@@ -15,19 +15,18 @@ dropbtn {
     display: none;
     position: absolute;
     background-color: #f1f1f1;
-    min-width: 160px;
+    min-width: 300px;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     z-index: 1;
   }
   
-  .dropdown-content a {
+  .dropdown-content p {
     color: #000000;
-    padding: 12px 50px;
-    text-decoration: none;
+    padding: 12px 20px;
     display: block;
   }
   
-  .dropdown-content a:hover {background-color: #ddd;}
+  .dropdown-content p:hover {background-color: #ddd;}
   
   .dropdown:hover .dropdown-content {display: block;}
   
