--- a/cell02/ex02/parallax.css
+++ b/cell02/ex02/parallax.css
@@ -1,8 +1,21 @@
-  body, html{
+  /*body, html{
     height: 100%;
   }
-  .parallax{
-    background-image: url(https://www.shutterstock.com/image-photo/kitten-head-paws-peeking-over-600nw-1869172456.jpg);
+  .parallax1 {
+    background-image: url('');
+    height: 100%; 
+    background-attachment: fixed;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+  }
+  .parallax2 {
+    background-image: url('');
+    height: 100%; 
+    background-attachment: fixed;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
   }
   .center{
     position: absolute;
