--- a/cell03/ex00/backgroound.css
+++ b/cell03/ex00/backgroound.css
@@ -1,13 +1,12 @@
-*{
-    padding: 0;
-    margin: 0;
-}
 body{
     height: 100vh;
     background-color: white;
 }
 button{
     font-size: 1.4em;
-    padding: 1px 2px;
+    padding: 5px 5px;
     background-color: white;
+    position: absolute;
+    top: 5px;
+    left: 5px;
 }
