--- a/cell03/ex00/backgroound.css
+++ b/cell03/ex00/backgroound.css
@@ -1,11 +1,11 @@
 body{
     height: 100vh;
-    background-color: white;
+    background-color: rgb(255, 255, 255);
 }
 button{
     font-size: 1.4em;
     padding: 5px 5px;
-    background-color: white;
+    background-color: rgb(255, 255, 255);
     position: absolute;
     top: 5px;
     left: 5px;
